danielcherubini.tugbot-rs.b66efb1c74cabd1970d9aaa6928c064ff6fac615
Running as unit: run-p1745238-i14325346.scope; invocation ID: f7300e2ad9cb43ebbf05cdd68f76df5e
   Compiling proc-macro2 v1.0.89
   Compiling unicode-ident v1.0.14
   Compiling libc v0.2.164
   Compiling shlex v1.3.0
    Checking cfg-if v1.0.0
   Compiling autocfg v1.4.0
    Checking bytes v1.8.0
    Checking log v0.4.22
   Compiling cc v1.2.1
    Checking pin-project-lite v0.2.15
    Checking itoa v1.0.12
    Checking once_cell v1.20.2
    Checking memchr v2.7.4
    Checking stable_deref_trait v1.2.0
    Checking futures-core v0.3.31
    Checking fnv v1.0.7
    Checking smallvec v1.13.2
   Compiling slab v0.4.9
    Checking futures-sink v0.3.31
    Checking spin v0.9.8
    Checking untrusted v0.9.0
   Compiling quote v1.0.37
    Checking futures-channel v0.3.31
    Checking getrandom v0.2.15
    Checking mio v1.0.2
    Checking socket2 v0.5.7
   Compiling syn v2.0.87
    Checking pin-utils v0.1.0
    Checking futures-task v0.3.31
    Checking writeable v0.5.5
    Checking futures-io v0.3.31
   Compiling serde v1.0.215
    Checking litemap v0.7.3
    Checking futures-util v0.3.31
   Compiling httparse v1.9.5
    Checking tracing-core v0.1.32
    Checking hashbrown v0.15.1
    Checking equivalent v1.0.1
    Checking icu_locid_transform_data v1.5.0
   Compiling ring v0.17.8
   Compiling typenum v1.17.0
   Compiling pkg-config v0.3.31
    Checking indexmap v2.6.0
   Compiling version_check v0.9.5
    Checking icu_properties_data v1.5.0
   Compiling vcpkg v0.2.15
   Compiling generic-array v0.14.7
    Checking icu_normalizer_data v1.5.0
    Checking write16 v1.0.0
    Checking try-lock v0.2.5
    Checking utf8_iter v1.0.4
    Checking utf16_iter v1.0.5
    Checking want v0.3.1
   Compiling ring v0.16.20
   Compiling openssl-sys v0.9.104
    Checking http v0.2.12
    Checking byteorder v1.5.0
    Checking percent-encoding v2.3.1
    Checking form_urlencoded v1.2.1
    Checking http v1.1.0
    Checking tower-service v0.3.3
   Compiling lock_api v0.4.12
    Checking bitflags v2.6.0
    Checking foreign-types-shared v0.1.1
   Compiling thiserror v1.0.69
   Compiling strsim v0.11.1
   Compiling rustls v0.20.9
   Compiling rustls v0.21.12
    Checking spin v0.5.2
   Compiling openssl v0.10.68
   Compiling parking_lot_core v0.9.10
    Checking untrusted v0.7.1
   Compiling ident_case v1.0.1
    Checking http-body v1.0.1
    Checking foreign-types v0.3.2
    Checking block-buffer v0.10.4
    Checking crypto-common v0.1.6
    Checking rand_core v0.6.4
   Compiling num-traits v0.2.19
   Compiling unicase v2.8.0
    Checking atomic-waker v1.1.2
    Checking scopeguard v1.2.0
    Checking ryu v1.0.18
   Compiling native-tls v0.2.12
   Compiling mime_guess v2.0.5
    Checking digest v0.10.7
    Checking http-body v0.4.6
    Checking cpufeatures v0.2.15
    Checking openssl-probe v0.1.5
    Checking mime v0.3.17
   Compiling serde_json v1.0.133
    Checking httpdate v1.0.3
    Checking parking_lot v0.12.3
    Checking sha-1 v0.10.1
    Checking encoding_rs v0.8.35
   Compiling either v1.13.0
   Compiling synstructure v0.13.1
    Checking sct v0.7.1
    Checking webpki v0.22.4
    Checking rustls-webpki v0.101.7
   Compiling darling_core v0.20.10
   Compiling rustversion v1.0.18
    Checking base64 v0.21.7
    Checking powerfmt v0.2.0
    Checking ipnet v2.10.1
    Checking base64 v0.13.1
   Compiling heck v0.5.0
   Compiling pq-sys v0.6.3
    Checking utf-8 v0.7.6
    Checking adler2 v2.0.0
    Checking miniz_oxide v0.8.0
   Compiling zerofrom-derive v0.1.4
   Compiling yoke-derive v0.7.4
   Compiling zerovec-derive v0.10.3
   Compiling tokio-macros v2.4.0
   Compiling displaydoc v0.2.5
    Checking tokio v1.41.1
   Compiling serde_derive v1.0.215
   Compiling icu_provider_macros v1.5.0
   Compiling tracing-attributes v0.1.27
    Checking zerofrom v0.1.4
    Checking yoke v0.7.4
   Compiling zerocopy-derive v0.7.35
    Checking zerovec v0.10.4
   Compiling thiserror-impl v1.0.69
    Checking zerocopy v0.7.35
    Checking tracing v0.1.40
    Checking tinystr v0.7.6
    Checking icu_collections v1.5.0
    Checking icu_locid v1.5.0
   Compiling openssl-macros v0.1.1
    Checking ppv-lite86 v0.2.20
   Compiling darling_macro v0.20.10
    Checking icu_provider v1.5.0
    Checking rand_chacha v0.3.1
    Checking rand v0.8.5
    Checking icu_locid_transform v1.5.0
    Checking icu_properties v1.5.1
   Compiling darling v0.20.10
   Compiling dsl_auto_type v0.1.2
    Checking rustls-pemfile v1.0.4
    Checking ordered-float v2.10.1
    Checking webpki-roots v0.22.6
   Compiling diesel_table_macro_syntax v0.2.0
    Checking scheduled-thread-pool v0.2.7
    Checking http-body-util v0.1.2
    Checking aho-corasick v1.1.3
    Checking tokio-util v0.7.12
    Checking tokio-rustls v0.24.1
    Checking tokio-rustls v0.23.4
    Checking crc32fast v1.4.2
    Checking icu_normalizer v1.5.0
    Checking num-conv v0.1.0
    Checking h2 v0.4.7
    Checking h2 v0.3.26
    Checking tokio-native-tls v0.3.1
    Checking rustls-pki-types v1.10.0
    Checking regex-syntax v0.8.5
   Compiling serenity v0.11.7
    Checking idna_adapter v1.2.0
    Checking idna v1.0.3
   Compiling anyhow v1.0.93
    Checking time-core v0.1.2
    Checking sync_wrapper v0.1.2
    Checking webpki-roots v0.25.4
    Checking rustls-pemfile v2.2.0
    Checking flate2 v1.0.35
    Checking r2d2 v0.8.10
   Compiling diesel_derives v2.2.3
   Compiling async-trait v0.1.83
    Checking url v2.5.3
    Checking serde_urlencoded v0.7.1
    Checking deranged v0.3.11
    Checking tungstenite v0.17.3
    Checking async-tungstenite v0.17.2
    Checking time v0.3.36
    Checking regex-automata v0.4.9
    Checking serde-value v0.7.0
    Checking hyper v0.14.31
    Checking futures v0.3.31
    Checking sync_wrapper v1.0.1
    Checking hyper v1.5.1
    Checking bitflags v1.3.2
    Checking unicode_categories v0.1.1
    Checking base64 v0.22.1
    Checking typemap_rev v0.1.5
    Checking snailquote v0.3.1
    Checking unidecode v0.3.0
    Checking dotenv v0.15.0
    Checking hyper-util v0.1.10
    Checking regex v1.11.1
    Checking diesel v2.2.4
    Checking hyper-tls v0.6.0
    Checking reqwest v0.12.9
    Checking hyper-rustls v0.24.2
    Checking reqwest v0.11.27
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.4/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
